test-cases/negative/test_017_method_call_on_non_object.lay
# negative test: method call on non-object
# expected: error should be thrown

the variable x of type Number is 5
call x dot greet


